Formatted notebook markdown

--- a/Hodrick–Prescott filter/Hodrick-Prescott Filter.ipynb
+++ b/Hodrick–Prescott filter/Hodrick-Prescott Filter.ipynb
@@ -52,7 +52,7 @@
     "\n",
     "---\n",
     "\n",
-    "While the Hodrick Prescott Filter is a popular tool to extract the estimated trend and cyclical component of a time series, there are sources, such as [this one](https://econweb.ucsd.edu/~jhamilto/hp.pdf) that accentuate potential drawbacks to using this filter\n",
+    "While the Hodrick-Prescott Filter is a popular tool to extract the estimated trend and cyclical component of a time series, there are sources, such as [this one](https://econweb.ucsd.edu/~jhamilto/hp.pdf) that accentuate potential drawbacks to using this filter.\n",
     "\n",
     "---\n",
     "\n",
@@ -1317,7 +1317,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "9fb0ead3",
+   "id": "41329d10",
    "metadata": {
     "scrolled": false
    },
