Formatted notebook markdown

--- a/Hodrick–Prescott filter/Hodrick-Prescott Filter.ipynb
+++ b/Hodrick–Prescott filter/Hodrick-Prescott Filter.ipynb
@@ -5,7 +5,7 @@
    "id": "6427fc92",
    "metadata": {},
    "source": [
-    "**Hodrick Prescott Filter/Decomposition**\n",
+    "**Hodrick Prescott Filter/Decomposition Notes**\n",
     "\n",
     "Noah Rubin\n",
     "\n",
@@ -1317,7 +1317,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "41329d10",
+   "id": "a4b9ce1a",
    "metadata": {
     "scrolled": false
    },
