Formatted notebook markdown

--- a/Hodrick–Prescott filter/Hodrick-Prescott Filter.ipynb
+++ b/Hodrick–Prescott filter/Hodrick-Prescott Filter.ipynb
@@ -48,7 +48,7 @@
     "\n",
     "$$\\hat{\\tau}_i = \\sum_{j=1}^T p_{ij}y_j$$\n",
     "\n",
-    "in which $p_{ij}$ represents row $i$, column $j$ in the $(I_T + \\lambda K^TK)^{-1}$ matrix. Since $\\hat{c}_i = (y_i - \\hat{\\tau}_i)$ is computed based off our trend estimates, the vector of estimated cyclical components of the time series can also be viewed as a weighted sum of the individual values $y_i$ in our time series.\n",
+    "in which $p_{ij}$ represents row $i$, column $j$ in the $(I_T + \\lambda K^TK)^{-1}$ matrix. Since $\\hat{c}_t = (y_t - \\hat{\\tau}_t)$ is computed based off our trend estimates, the vector of estimated cyclical components of the time series can also be viewed as a weighted sum of the individual values $y_i$ in our time series.\n",
     "\n",
     "---\n",
     "\n",
@@ -1317,7 +1317,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a4b9ce1a",
+   "id": "582a20cf",
    "metadata": {
     "scrolled": false
    },
