Formatted notebook markdown

--- a/Hodrick–Prescott filter/Hodrick-Prescott Filter.ipynb
+++ b/Hodrick–Prescott filter/Hodrick-Prescott Filter.ipynb
@@ -87,7 +87,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# For clear plots\n",
+    "# Allows the plots to show once you upload to github (doesn't look like github accepts svg)\n",
     "%matplotlib inline\n",
     "\n",
     "# If running these cells locally, comment out the line above and uncomment the line below (much clearer plots)\n",
@@ -1317,7 +1317,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "582a20cf",
+   "id": "4fc3d9a8",
    "metadata": {
     "scrolled": false
    },
