--- a/Hodrick–Prescott filter/Hodrick-Prescott Filter.ipynb
+++ b/Hodrick–Prescott filter/Hodrick-Prescott Filter.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "The Hodrick Prescott Filter is a data smoothing technique that aims to extract the trend $\\tau_t$ and cyclical component $c_t$ from a time series $y_t$ such that $y_t = \\tau_t + c_t$. It aims to remove short term fluctuations associated with the time series in an attempt to reveal the more general trends across different segments of time, which can then assist with economic forecasting. \n",
+    "The Hodrick Prescott Filter is a data smoothing technique that aims to extract the trend $\\tau_t$ and cyclical component $c_t$ from a time series $y_t$ such that $y_t = \\tau_t + c_t$. It aims to remove short term fluctuations associated with the time series in an attempt to reveal the more general trends across particular segments of time, which can then assist with economic forecasting. \n",
     "\n",
     "---\n",
     "\n",
@@ -1317,7 +1317,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "7ea94743",
+   "id": "9e8749ca",
    "metadata": {
     "scrolled": false
    },
