Fixed confusing math notation

--- a/Hodrick–Prescott filter/Hodrick-Prescott Filter.ipynb
+++ b/Hodrick–Prescott filter/Hodrick-Prescott Filter.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "Self study - December 2021\n",
     "\n",
-    "*Note: Refer to my hp_filter_helper_functions.py file for the helper functions*"
+    "*Note: Refer to the hp_filter_helper_functions.py file for the helper functions*"
    ]
   },
   {
@@ -34,7 +34,7 @@
     "\n",
     "For a (finite) sample of size $T$ our $\\vec{\\hat\\tau}$ vector can be obtained through computing \n",
     "\n",
-    "$$\\vec{\\hat\\tau} = (I_T + \\lambda K^TK)^{-1}\\vec{y}$$\n",
+    "$$\\vec{\\hat\\tau} = (I_T + \\lambda K'K)^{-1}\\vec{y}$$\n",
     "\n",
     "whereby statsmodels defines $I_T$ as an identity matrix that has dimension $T \\times T$, where $T$ is the number of rows in the dataset. The matrix $K$ is a $(T - 2) \\times T$ matrix that has the following properties:\n",
     "\n",
@@ -44,11 +44,11 @@
     "\n",
     "where $K_{ij}$ represents row $i$, column $j$ in our matrix $K$\n",
     "\n",
-    "Computing $K^T K$ ensures a $T \\times T$ matrix, which means that we are able to add this matrix to $I_T$. The fact that this $K^TK$ matrix is square ensures that $(I + K^TK)$ is also square, hence we can find an inverse (it exists). The presence of many zeroes in the $K$ matrix makes this a [sparse matrix](https://machinelearningmastery.com/sparse-matrices-for-machine-learning/), which can be space inefficient for larger sample sizes. Since $\\vec{\\hat\\tau} = (I_T + \\lambda K^TK)^{-1}\\vec{y} $  is a process of multiplying a matrix and a vector toghether, by matrix multiplication laws, each component of the trend estimate vector can be computed through a weighted sum whereby \n",
+    "Computing $K'K$ ensures a $T \\times T$ matrix, which means that we are able to add this matrix to $I_T$. The fact that this $K'K$ matrix is square ensures that $(I + K'K)$ is also square, hence we can find an inverse (it exists). The presence of many zeroes in the $K$ matrix makes this a [sparse matrix](https://machinelearningmastery.com/sparse-matrices-for-machine-learning/), which can be space inefficient for larger sample sizes. Since $\\vec{\\hat\\tau} = (I_T + \\lambda K'K)^{-1}\\vec{y} $  is a process of multiplying a matrix and a vector toghether, by matrix multiplication laws, each component of the trend estimate vector can be computed through a weighted sum whereby \n",
     "\n",
     "$$\\hat{\\tau}_i = \\sum_{j=1}^T p_{ij}y_j$$\n",
     "\n",
-    "in which $p_{ij}$ represents row $i$, column $j$ in the $(I_T + \\lambda K^TK)^{-1}$ matrix. Since $\\hat{c}_t = (y_t - \\hat{\\tau}_t)$ is computed based off our trend estimates, the vector of estimated cyclical components of the time series can also be viewed as a weighted sum of the individual values $y_i$ in our time series.\n",
+    "in which $p_{ij}$ represents row $i$, column $j$ in the $(I_T + \\lambda K'K)^{-1}$ matrix. Since $\\hat{c}_t = (y_t - \\hat{\\tau}_t)$ is computed based off our trend estimates, the vector of estimated cyclical components of the time series can also be viewed as a weighted sum of the individual values $y_i$ in our time series.\n",
     "\n",
     "---\n",
     "\n",
